// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Player Empty 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="root svelte-1q6n1tm"
  >
    <audio
      autoplay=""
      data-testid="audio"
    />
    <div
      class="content svelte-1q6n1tm"
    >
      <span
        class="current svelte-1q6n1tm"
      />
       
      <div
        class="player svelte-1q6n1tm"
      >
        <span
          class="controls svelte-1q6n1tm"
        >
          
           
          <span
            class="svelte-1y2tggl"
          >
            <button
              class="iconOnly noBorder svelte-9liv1b"
            >
              <i
                class="material-icons svelte-9liv1b"
              >
                shuffle
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="ml-2 mr-1 iconOnly noBorder svelte-9liv1b"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              skip_previous
            </i>
             
             
             
          </button>
           
          <button
            class="mx-1 iconOnly large svelte-9liv1b"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="ml-1 mr-2 iconOnly noBorder svelte-9liv1b"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              skip_next
            </i>
             
             
             
          </button>
           
          <span
            class="svelte-1y2tggl"
          >
            <button
              class="iconOnly noBorder svelte-9liv1b"
            >
              <i
                class="material-icons svelte-9liv1b"
              >
                repeat
              </i>
               
               
               
            </button>
          </span>
           
        </span>
         
        <div
          class="svelte-1tahbl8"
        >
          <span
            class="svelte-1tahbl8"
          >
            0:00
          </span>
           
          <div
            class="wrapper w-full svelte-10ahnd8"
          >
            <input
              class="w-full svelte-10ahnd8"
              max="0"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-10ahnd8"
            >
              <span
                class="progress svelte-10ahnd8"
                style="right:100%"
              />
            </div>
          </div>
           
          <span
            class="svelte-1tahbl8"
          >
            0:00
          </span>
        </div>
      </div>
       
      <span
        class="volume svelte-1q6n1tm"
      >
        <div
          class="svelte-t4pf46"
        >
          <span
            class="volume-slider svelte-t4pf46"
          >
            <div
              class="wrapper w-full svelte-10ahnd8"
            >
              <input
                class="w-full svelte-10ahnd8"
                max="100"
                min="0"
                type="range"
              />
               
              <div
                class="sliderTrack svelte-10ahnd8"
              >
                <span
                  class="progress svelte-10ahnd8"
                  style="right:0%"
                />
              </div>
            </div>
          </span>
           
          <button
            class="iconOnly noBorder svelte-9liv1b"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              volume_up
            </i>
             
             
             
          </button>
        </div>
      </span>
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/Player With Track List 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="root svelte-1q6n1tm"
  >
    <audio
      autoplay=""
      data-testid="audio"
      src="./no-duration.mp3"
    />
    <div
      class="content svelte-1q6n1tm"
    >
      <span
        class="current svelte-1q6n1tm"
      >
        <div
          class="undefined root svelte-whrgz7"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./# Films/cover.jpg"
              class="h-16 w-16 text-xs actionable svelte-hn7eai rounded-sm"
              loading="lazy"
              src="./%23 Films/cover.jpg#nonce=0.1"
            />
             
            
          </a>
           
          <div
            class="track svelte-whrgz7"
          >
            <span
              class="title svelte-whrgz7"
            >
              file 1
            </span>
             
            <a
              class="text-sm underlined"
              href="#/artist/0"
              onclick="event.stopPropagation()"
            >
              Someone
            </a>
          </div>
           
           
        </div>
      </span>
       
      <div
        class="player svelte-1q6n1tm"
      >
        <span
          class="controls svelte-1q6n1tm"
        >
          <span>
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-dvv38h"
            >
              <button
                class="iconOnly noBorder svelte-9liv1b"
              >
                <i
                  class="material-icons svelte-9liv1b"
                >
                  library_add
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </span>
          
           
          <span
            class="svelte-1y2tggl"
          >
            <button
              class="iconOnly noBorder svelte-9liv1b"
            >
              <i
                class="material-icons svelte-9liv1b"
              >
                shuffle
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="ml-2 mr-1 iconOnly noBorder svelte-9liv1b"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              skip_previous
            </i>
             
             
             
          </button>
           
          <button
            class="mx-1 iconOnly large svelte-9liv1b"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="ml-1 mr-2 iconOnly noBorder svelte-9liv1b"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              skip_next
            </i>
             
             
             
          </button>
           
          <span
            class="svelte-1y2tggl"
          >
            <button
              class="iconOnly noBorder svelte-9liv1b"
            >
              <i
                class="material-icons svelte-9liv1b"
              >
                repeat
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="invisible iconOnly noBorder svelte-9liv1b"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              favorite_border
            </i>
             
             
             
          </button>
        </span>
         
        <div
          class="svelte-1tahbl8"
        >
          <span
            class="svelte-1tahbl8"
          >
            0:00
          </span>
           
          <div
            class="wrapper w-full svelte-10ahnd8"
          >
            <input
              class="w-full svelte-10ahnd8"
              max="0"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-10ahnd8"
            >
              <span
                class="progress svelte-10ahnd8"
                style="right:100%"
              />
            </div>
          </div>
           
          <span
            class="svelte-1tahbl8"
          >
            0:00
          </span>
        </div>
      </div>
       
      <span
        class="volume svelte-1q6n1tm"
      >
        <div
          class="svelte-t4pf46"
        >
          <span
            class="volume-slider svelte-t4pf46"
          >
            <div
              class="wrapper w-full svelte-10ahnd8"
            >
              <input
                class="w-full svelte-10ahnd8"
                max="100"
                min="0"
                type="range"
              />
               
              <div
                class="sliderTrack svelte-10ahnd8"
              >
                <span
                  class="progress svelte-10ahnd8"
                  style="right:0%"
                />
              </div>
            </div>
          </span>
           
          <button
            class="iconOnly noBorder svelte-9liv1b"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              volume_up
            </i>
             
             
             
          </button>
        </div>
      </span>
    </div>
  </div>
</section>
`;
